Fixed alignment tour dates
Adjusted the events list to recognize screens up to 990px to make the tour dates list text-align: center when viewing on small screens

--- a/css/event-list.css
+++ b/css/event-list.css
@@ -14,7 +14,7 @@
 		list-style: none;
 		font-family: 'Lato', sans-serif;
 		margin-top: 20px;
-   		 margin-bottom: 45px;
+   		margin-bottom: 45px;
 		padding: 0px;
 	}
 	.event-list > li {
@@ -48,7 +48,7 @@
 		line-height: 1;
 	}
 
-		.event-list > li > time > .days {
+	.event-list > li > time > .days {
 		display: block;
 		font-size: 33pt;
 		font-weight: 100;
@@ -96,9 +96,11 @@
 		width: 100%;
 		text-align: center;
 	}
+
 	.event-list > li > .social > ul {
 		margin: 0px;
 	}
+
 	.event-list > li > .info > ul > li,
 	.event-list > li > .social > ul > li {
 		display: table-cell;
@@ -189,6 +191,7 @@
 		.event-list > li > .info > .desc {
 			padding: 0px 10px;
 		}
+
 		.event-list > li > .info > .sub-title {
 			padding: 10px;
 			padding-top: 5px;
@@ -217,5 +220,79 @@
 			display: block;
 			width: 40px;
 			padding: 10px 0px 9px;
+		}
+	}
+
+	@media (max-width: 990px) {
+		.event-list > li {
+			position: relative;
+			display: block;
+			width: 100%;
+			height: 120px;
+			padding: 0px;
+		}
+		.event-list > li > time,
+		.event-list > li > img  {
+			display: inline-block;
+		}
+		.event-list > li > time,
+		.event-list > li > img {
+			width: 120px;
+			float: left;
+		}
+		.event-list > li > .info {
+			background-color: rgb(245, 245, 245);
+			overflow: hidden;
+		}
+		.event-list > li > time,
+		.event-list > li > img {
+			width: 120px;
+			height: 120px;
+			padding: 0px;
+			margin: 0px;
+		}
+		.event-list > li > .info {
+			position: relative;
+			height: 120px;
+			text-align: left;
+			padding-right: 40px;
+		}	
+		.event-list > li > .info > .title, 
+		.event-list > li > .info > .desc {
+			padding: 0px 10px;
+		}
+
+		.event-list > li > .info > .sub-title {
+			padding: 10px;
+			padding-top: 5px;
+		}
+
+		.event-list > li > .info > ul {
+			position: absolute;
+			left: 0px;
+			bottom: 0px;
+		}
+		.event-list > li > .social {
+			position: absolute;
+			top: 0px;
+			right: 0px;
+			display: block;
+			width: 40px;
+		}
+        .event-list > li > .social > ul {
+            border-left: 1px solid rgb(230, 230, 230);
+        }
+		.event-list > li > .social > ul > li {			
+			display: block;
+            padding: 0px;
+		}
+		.event-list > li > .social > ul > li > a {
+			display: block;
+			width: 40px;
+			padding: 10px 0px 9px;
+		}
+
+		.info h2, .info p {
+			text-align: center;
 		}
 	}
